Changes in  homework solutions for intro notebook

--- a/01-intro/Homework.ipynb
+++ b/01-intro/Homework.ipynb
@@ -425,8 +425,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "c8512206-706b-4b61-869a-8283bbd512d1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "w = XTX_inv @ X.T @ y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "e82aef07-999b-4284-8aa4-057e44089064",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sum of all elements in w: 0.5187709081074016\n"
+     ]
+    }
+   ],
+   "source": [
+    "result_sum = w.sum()\n",
+    "print(\"Sum of all elements in w:\", result_sum)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c8c4b67a-c9de-42db-98d1-9dd68754adf3",
    "metadata": {},
    "outputs": [],
    "source": []
