Updated Linear Algebra Fresher notebook

--- a/01-intro/Linear_Algebra_Fresher.ipynb
+++ b/01-intro/Linear_Algebra_Fresher.ipynb
@@ -1,6 +1,580 @@
 {
- "cells": [],
- "metadata": {},
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "9184ae8a-52b3-4446-b00e-7e402983ee47",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d484abb6-7a23-4826-9b13-d10fe502c825",
+   "metadata": {},
+   "source": [
+    "# Vector-Vector Multiplication"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "2173ec6a-45ee-4472-9edc-447bb4709d00",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "u = np.array([1, 2, 3])\n",
+    "\n",
+    "v = np.array([4, 5, 6])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "5c70ccaf-861d-4851-bf5b-3e333de165ed",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((3,), (3,))"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "u.shape, v.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "7351ab7f-adce-474b-a2fa-3ed28e3f6d3a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(3, 3)"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "u.shape[0], v.shape[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "850deec9-3dee-45b3-b0aa-95feb1baa3f6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def vector_vector_multiplication(u, v):\n",
+    "    assert u.shape[0] == v.shape[0]                   # ensure shapes match\n",
+    "\n",
+    "    n = u.shape[0]\n",
+    "\n",
+    "    result = 0.0\n",
+    "\n",
+    "    for i in range(n):\n",
+    "        result = result + u[i] * v[i]    # dot product of each row pair\n",
+    "\n",
+    "    return result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "fa2fccb5-1f21-48fb-a69c-598c06e57455",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(32.0)"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vector_vector_multiplication(u, v)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "e1c75b9c-b55a-4d26-bf0f-be5bd58dbda7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.int64(50)"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "u.dot(v)                             # Numpy inbuilt function"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "524087b0-ceaa-4aed-8092-313aaae9e369",
+   "metadata": {},
+   "source": [
+    "# Matrix-Vector Multiplication"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "d4f78622-4e54-4673-ae71-4fa197960520",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "U = np.array([\n",
+    "    [1, 2, 3],                                 # Capital U denotes matrix and small u denotes vector and same for v\n",
+    "    [4, 5, 6]\n",
+    "])\n",
+    "                                        \n",
+    "v = np.array([7, 8, 9])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "0f1088bc-fe29-498b-ace9-1d7768f4a45d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 2, 3],\n",
+       "       [4, 5, 6]])"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "U"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "b48940de-f1dd-49f2-a3ad-05b159b34ff7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((2, 3), (3,))"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "U.shape , v.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "f94eddab-2dc6-48d8-a52a-8762aac53ce5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def matrix_vector_multiplication(U, v):\n",
+    "    assert U.shape[1] == v.shape[0]\n",
+    "\n",
+    "    num_rows = U.shape[0]\n",
+    "\n",
+    "    result = np.zeros(num_rows)\n",
+    "\n",
+    "    for i in range(num_rows):\n",
+    "        result[i] = vector_vector_multiplication(U[i], v)\n",
+    "\n",
+    "    return result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "d4318d59-171a-4561-ad93-295b1a784d12",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 50., 122.])"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "matrix_vector_multiplication(U, v)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "5c471e4e-9e27-4b92-bae0-f0df16f87eb4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 50, 122])"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "U.dot(v)                              # Numpy inbuilt function"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "24387ec9-7b3c-42cf-95c0-2e1ee1321627",
+   "metadata": {},
+   "source": [
+    "# Matrix-Matrix Multiplication"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "a3b1d581-6019-47a6-a1ae-c949fed35672",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "U = np.array([\n",
+    "    [1, 2, 3],\n",
+    "    [4, 5, 6]\n",
+    "])\n",
+    "\n",
+    "V = np.array([\n",
+    "    [1, 4],\n",
+    "    [2, 5],\n",
+    "    [3, 6]\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "de2a854b-f024-434c-b0e3-1ff9539b3a91",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((2, 3), (3, 2))"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "U.shape, V.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "6a92f6a7-386a-4f63-8094-8797c94ceb4e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def matrix_matrix_multiplication(U, V):\n",
+    "    assert U.shape[1] == V.shape[0]\n",
+    "\n",
+    "    num_rows = U.shape[0]\n",
+    "    num_cols = V.shape[1]\n",
+    "    \n",
+    "    result = np.zeros((num_rows , num_cols))\n",
+    "\n",
+    "    for i in range(num_cols):\n",
+    "        vi = V[ :, i]\n",
+    "        Uvi = matrix_vector_multiplication(U, vi)\n",
+    "        result[ :, i] = Uvi\n",
+    "\n",
+    "    return result\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "66df04c8-d81e-492e-bce6-6ea098b9aae2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[14., 32.],\n",
+       "       [32., 77.]])"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "matrix_matrix_multiplication(U, V)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "5feca039-a6de-4a2b-b046-db0119e2926f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[14, 32],\n",
+       "       [32, 77]])"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "U.dot(V)                              #Numpy in built function"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fed00c3c-b08e-47e0-a7c5-818685f50d14",
+   "metadata": {},
+   "source": [
+    "# Identity Matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "a773770d-a33c-4f92-b5c5-1f70d9c32a60",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1., 0.],\n",
+       "       [0., 1.]])"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "I = np.eye(2)   \n",
+    "I"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "f0733731-f36f-4882-9570-b8ee233ccee7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 4],\n",
+       "       [2, 5],\n",
+       "       [3, 6]])"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "V"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "2c7c007b-33f3-49db-922d-8fac83c3b622",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1., 4.],\n",
+       "       [2., 5.],\n",
+       "       [3., 6.]])"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "V.dot(I)                              # Any matrix * I = Matrix (it should have same dimensions)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1d13308f-8d43-4955-927c-28083cd177d0",
+   "metadata": {},
+   "source": [
+    "# Inverse"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "d8913d90-d5a3-4ec1-9b13-6edb2a0285e0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "A = np.array([\n",
+    "    [1, 2, 3],                             # Need square matrix for inverse\n",
+    "    [0, 1, 4],                             # A matrix is invertible (has an inverse) only if its determinant is non-zero.                                      \n",
+    "    [5, 6, 0]                              # Inverse of matrix * matrix = I\n",
+    "]) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "08d47020-9b48-45df-8e42-6ef4e4bd7aca",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-24.,  18.,   5.],\n",
+       "       [ 20., -15.,  -4.],\n",
+       "       [ -5.,   4.,   1.]])"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A_inv = np.linalg.inv(A)\n",
+    "A_inv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "ef8d07d8-0654-470c-b500-e059769c3fa3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 1.0000000e+00,  0.0000000e+00,  0.0000000e+00],\n",
+       "       [ 0.0000000e+00,  1.0000000e+00,  0.0000000e+00],\n",
+       "       [ 0.0000000e+00, -8.8817842e-16,  1.0000000e+00]])"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A_inv.dot(A)                                #8.88e-16 ≈ 0 — it’s less than one quadrillionth, so it’s negligible."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "9e129d12-7bb2-47b8-aa0c-77487b9c439d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 1.,  0.,  0.],\n",
+       "       [ 0.,  1.,  0.],\n",
+       "       [ 0., -0.,  1.]])"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.round(A_inv.dot(A), decimals=10)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "97dacdb0-cd9c-49b9-a554-776d785a79fb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.1"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 5
 }
